--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ekolobuilder/eko-routing",
     "description": "PHP module for routing urls",
+    "version": "0.0.1",
     "type": "library",
     "license": "MIT",
     "authors": [
